2007-12-20  Johan Dahlin  <johan@gnome.org>

	* gtk/gtk-builder-convert (GtkBuilderConverter._remove_window): 
	Refactor to avoid some duplication.
	Convert toplevel GtkMenu's top popups and not menubars in the ui manager.
	Fixes #504749, Yuri Pimenov

2007-12-20  Kristian Rietveld  <kris@imendio.com>

	* configure.in: RYuri Pimenovemove leftovers from old XRandR check.  Makes
	the build work again on systems without xrandr 1.2.

2007-12-20  Christian Persch  <chpe@gnome.org>

	* configure.in:
	* modules/other/gail/libgail-util/Makefile.am:
	Keep the same libtool version as the standalone	libgail-util had.
        Bug #504643.

2007-12-20 15:30:09  Tim Janik  <timj@imendio.com>

	* Makefile.decl: generate HTML reports for test-report perf-report full-report.

2007-12-20  Alexander Larsson  <alexl@redhat.com>
        
	* gdk/x11/gdkapplaunchcontext-x11.c:
	Update for gio API changes

2007-12-20  Richard Hult  <richard@imendio.com>

	* gdk/quartz/GdkQuartzWindow.c:
	* gdk/quartz/GdkQuartzWindow.h: Make manual resizing smoother by
	processing events after changing the size.

2007-12-20  Richard Hult  <richard@imendio.com>

	* modules/other/gail/gailwindow.c: (gail_window_get_mdi_zorder):
	Add stub for quartz to fix build.

2007-12-20  Christian Persch  <chpe@gnome.org>

	* modules/other/gail/Makefile.am:
	* modules/other/gail/gailimage.c: (gail_image_class_init),
	(gail_image_init), (elide_underscores), (gail_image_get_name),
	(atk_image_interface_init), (gail_image_finalize):
	* modules/other/gail/gailimage.h:
	R modules/other/gail/gailintl.h:
	* po/POTFILES.skip: Use the stock item's label as the name of the
	accessible in gailimage.c. Bug #504246.

2007-12-19  Mathias Hasselmann  <mathias@openismus.com>

	Avoid some compiler warnings and remove obsolete code. (#339540)

	* gtk/gtkcalendar.c: Change week and year variable in
	calendar_paint_week_numbers from gint to guint. Remove obsolete "#if
	0" block from calendar_paint_day: The feature in question is handled