@@ -1,5 +1,11 @@
 2007-12-20  Johan Dahlin  <johan@gnome.org>
 
+	* tests/Makefile.am (TEST_PROGS): 
+	* tests/defaultvaluetest.c: Add a test for default values,
+	based on program by Christan Perch
+
+2007-12-20  Johan Dahlin  <johan@gnome.org>
+
 	* gtk/gtk-builder-convert (GtkBuilderConverter._remove_window): 
 	Refactor to avoid some duplication.
 	Convert toplevel GtkMenu's top popups and not menubars in the ui manager.
